# Auto-RL

./: .gitignore  README.md
autorl/: .env.template  SCHEMA.md  pyproject.toml  requirements.txt
autorl/agents/: __init__.py  dataset_inspector_agent.py  env_doctor_agent.py  reward_designer_agent.py  sentinel.py  training_agent.py  wm_planner_agent.py
autorl/coordination/: redis_coordinator.py
autorl/environments/: countdown_env.py
autorl/evaluator/: evaluator_agent.py  reporter.py
autorl/model_viewer/: countdown_inference.py  render_countdown.py  render_mujoco.py
autorl/orchestrator/: device.py  main.py  orchestrator_agent.py  run_context.py  schemas.py  swarm_runner.py
autorl/pod_manager/: pod_manager.py  runpod_agent.py
autorl/training/: env_utils.py  eval_world_model.py  hf_utils.py  reward_wrapper.py  runner.py  train_a2c.py  train_grpo_countdown.py  train_ppo.py  train_sac.py  train_world_model.py  wandb_setup.py  world_model_env.py
autorl/training/callbacks/: heartbeat_writer.py  weave_callback.py
autorl/ui/: next.config.ts
autorl/ui/agent/: middleware.py  start.sh
autorl/ui/app/: globals.css  layout.tsx  page.tsx
autorl/ui/app/api/copilotkit/: route.ts
autorl/ui/app/architecture/: page.tsx
autorl/ui/app/showcase/: page.tsx
autorl/ui/components/: AgentCard.tsx  ApprovalCard.tsx  HomePage.tsx  ResultsPanel.tsx  SentinelAlert.tsx
docs/: AutoRL_PersonA_Build_Guide.docx  AutoRL_PersonA_Build_Guide.md  AutoRL_PersonB_Build_Guide.docx  AutoRL_PersonB_Build_Guide.md  AutoRL_Project_Document.docx  AutoRL_Project_Document.md  (+1 more)
